# smbios-rs

./: .travis.yml  Cargo.toml  README.md
.builds/: stable.yml
src/: lib.rs
